overflow fixed

--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,6 +1,9 @@
 .gallery {
   grid-column: 1 / -1;
 
+  overflow: hidden;
+
+
   margin: 0 0 209px;
 
   @include on-tablet {
