--- a/src/styles/blocks/slider.scss
+++ b/src/styles/blocks/slider.scss
@@ -8,10 +8,18 @@
   }
 }
 
+.slides-container {
+  width: 100%;
+}
+
 .imgs_slides {
   width: 700%;
   display: flex;
   gap: 16px;
+
+  @include on-tablet {
+    width: 900%;
+  }
 
   & input {
     display: none;
@@ -41,16 +49,17 @@
 }
 
 .navigation {
-  margin: 20px 0 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   &-container {
     display: flex;
     width: 100vw;
     justify-content: center;
+
+    margin: 60px 0 0;
   }
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &-btn {
     background-color: $c-gray;
